@@ -1,3 +1,4 @@
+# This file was generated by 
 $LOAD_PATH.unshift(RAILS_ROOT + '/vendor/plugins/cucumber/lib') if File.directory?(RAILS_ROOT + '/vendor/plugins/cucumber/lib')
 
 unless ARGV.any? {|a| a =~ /^gems/}
