@@ -1,3 +1,7 @@
+# IMPORTANT: This file was generated by Cucumber <%= Cucumber::VERSION::STRING %>
+# Edit at your own peril - it's recommended to regenerate this file
+# in the future when you upgrade to a newer version of Cucumber.
+
 config.cache_classes = true # This must be true for Cucumber to operate correctly!
 
 # Log error messages when you accidentally call methods on nil.
