@@ -1,4 +1,7 @@
-# This file was generated with Cucumber <%= Cucumber::VERSION::STRING %>
+# IMPORTANT: This file was generated by Cucumber <%= Cucumber::VERSION::STRING %>
+# Edit at your own peril - it's recommended to regenerate this file
+# in the future when you upgrade to a newer version of Cucumber.
+# Consider adding your own code to a new file instead of editing this one.
 
 # Sets up the Rails environment for Cucumber
 ENV["RAILS_ENV"] ||= "cucumber"
