@@ -1,3 +1,8 @@
+# IMPORTANT: This file was generated by Cucumber <%= Cucumber::VERSION::STRING %>
+# Edit at your own peril - it's recommended to regenerate this file
+# in the future when you upgrade to a newer version of Cucumber.
+# Consider adding your own code to a new file instead of editing this one.
+
 require 'rubygems'
 require 'spork'
  
