@@ -3,7 +3,8 @@
 === New Features
 * Upgrade Rails generator to set a dependency to Spork 0.7.2. (Aslak Hellesøy)
 * Installation via rubygems will print a message telling people to read this file. (Aslak Hellesøy)
-* Rotten cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
+* Files generated by the Rails cucumber generator have information about the risks of editing. (Aslak Hellesøy) 
+* Rotten Cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
 
 === Bugfixes
 * Before('~@no-txn') is run on all scenarios without @no-txn causing Cucumber::Rails::World.use_transactional_fixtures to always be true. (#457 Aslak Hellesøy)
